# research-agent

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: check_agent.py  check_chat.py  check_llm.py  check_retriever.py  ingest_sample.py
src/: main.py
src/agent/: __init__.py  agent.py  parser.py  prompts.py  schemas.py
src/api/: __init__.py  chat.py  ingest.py  routes.py
src/core/: __init__.py  config.py  constants.py  enums.py  logger.py
src/llm/: __init__.py  base.py  client.py  schemas.py
src/memory/: schemas.py  store.py
src/rag/: __init__.py  chunking.py  embeddings.py  ingest.py  parser.py  pdf_parser.py  retriever.py  schemas.py  vector_client.py
src/schemas/: __init__.py  chat.py  ingest.py
src/services/: __init__.py  agent_service.py  chat_service.py  ingest_service.py
src/tools/: __init__.py  base.py  calculator.py  rag_search.py  registry.py
tests/: conftest.py  test_agent.py  test_agent_parser.py  test_calculator.py  test_chat_api.py  test_chat_service.py  test_chunking.py  test_embeddings.py  test_ingest.py  test_ingest_api.py  test_llm.py  test_rag_search_tool.py  test_registry.py  test_retriever.py
