[project]
name = "research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "fastembed>=0.8.0",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "openai>=2.32.0",
    "pypdf>=6.10.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
